# GeneZip

./: README.md
c_version/code/: File.c  File.h  Makefile  classifier.c  classifier.h  cli.c  cli.h  getline.c  getline.h  lz78.c  lz78.h  main.c
c_version/example/small_example/: run.sh  training.txt
c_version/example/small_example/output/: log  prediction_output
code/: Cargo.toml  build.sh
code/benches/: gzbench.rs
code/src/: classifier.rs  cli.rs  fasta_records_iterator.rs  get_gc.rs  kmer.rs  lz78.rs  main.rs
code/src/lib/: ani_calculator.rs  ani_calculator_tool.rs  ani_rating.rs  cached_fasta_nucleutide_iterator.rs  classifier.rs  cli.rs  contig_naming.rs  database.rs  fasta_nucleutide_iterator.rs  fasta_record.rs  fastani.rs  get_gc.rs  graph.rs  kmer.rs  kmer_database.rs  kmer_prediction.rs  lib.rs  logger.rs  lz78.rs  output_streams.rs  print_kmer.rs  reference_sequence.rs  samples_file_reader.rs  skani.rs  static_graph.rs  taxonomy.rs  use_classifier.rs
data/: 18c  20c  24c  4c  4c.tiny.fna  8c  ERR011150_bin.10  LiJ_2017__H2M514901__bin.5  SRR2992900_bin.58  SRR5106274_bin.22  SRR769516_bin.13  WenC_2017__N315__bin.25
examples/small_example/: run.sh  testing.txt
examples/small_example/output/: log  lz_matrix  prediction_output
examples/taxonomy_example/: ground_truth.tsv  run.sh  testing.txt  training.txt
examples/taxonomy_example/output/: log  lz_matrix  prediction_output
examples/tiny_example/: run.sh  training.txt
examples/tiny_example/output/: log  prediction_output
tests/: gc_tests.fna  paper_test.fna  paper_train.fna  presentation_test.fna  presentation_test_add_N.fna  presentation_test_two_seq.fna  presentation_train.fna  small_example_testing.txt  small_example_training.txt  taxonomy_test_testing.txt  taxonomy_test_training.txt  tiny_training.txt
