[package]
name = "GeneZip"
version = "1.1.0"
edition = "2021"
authors = ["Or Leibovich", "Yochai Meir", "Itai Sharon"]
readme = "../README.md"

[lib]
name = "GeneZipLib"
path = "src/lib/lib.rs"

[dependencies]
clap = { version = "4.3", features = ["derive", "wrap_help"] }
chrono = "0.4"
hashbrown = { version = "0.12", features = ["serde"] }
rayon = "1.5"
tempdir = "0.3"
flate2 = "1.0"
lazy_static = "1.2.0"
ndarray = { version = "0.15", features = ["serde"] }
ndarray-stats = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
gzp = { version = "0.11", default-features = false, features = ["deflate_rust"] }


[dev-dependencies]
criterion = {  version = "0.5", features = ["html_reports"] }

[[bench]]
name = "gzbench"
harness = false

[[bin]]
name = "GeneZip"
path = "src/bin/main.rs"