[package]
name = "GeneZip"
version = "1.3.0"
edition = "2021"
authors = ["Or Leibovich", "Yochai Meir", "Itai Sharon"]
readme = "../README.md"

[lib]
name = "GeneZipLib"
path = "src/lib/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "wrap_help"] }
chrono = "0.4"
hashbrown = { version = "0.15", features = ["serde"] }
rayon = "1.10"
tempdir = "0.3"
flate2 = "1.1"
lazy_static = "1.5.0"
ndarray = { version = "0.16", features = ["serde"] }
ndarray-stats = "0.6"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
gzp = { version = "1.0", default-features = false, features = ["deflate_rust"] }
polars = { version = "0.46", features = ["default", "csv", "lazy", "rows"] }
rand = "0.9"

[dev-dependencies]
criterion = {  version = "0.5", features = ["html_reports"] }

[[bench]]
name = "gzbench"
harness = false

[[bin]]
name = "GeneZip"
path = "src/bin/main.rs"

[[bin]]
name = "DBBuild"
path = "src/bin/db_build.rs"